# Mobius-flow

./: .gitignore  README.md  pyproject.toml
src/: conf.json  run.py
src/adapter/analyzer/: tvshow_analyzer.py
src/config/: conf.py
src/download_monitor/: aria2c_monitor.py  qb_monitor.py  streamrip_monitor.py
src/monitor/: alist.py  compresslib.py  strip.py
tests/: diff.py  test.py  watcher_test.py
