[tool.poetry]
name = "mobius_flow"
version = "0.1.0"
description = "A Auto-Work-Flow for mobiusite"
authors = ["Mobius <mobius@umbrao.com>"]
license = "AGPL3.0"
readme = "README.md"
packages = [{include = "mobius_flow"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
