[tool.poetry]
name = "mobius_flow"
version = "0.1.0"
description = "A Auto-Work-Flow for mobiusite"
authors = ["Mobius <mobius@umbrao.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "Mobius_flow"}]

[tool.poetry.dependencies]
python = "^3.9"
py7zr = "^0.20.4"
aria2p = "^0.11.3"
deepdiff = "^6.2.3"
tomlkit = "^0.11.6"
defaultlist = "^1.0.0"
qbittorrent-api = "^2023.3.44"

[tool.poetry.group.dev.dependencies]
qobuz-dl = "^0.9.9.9"
watchdog = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
